sobeam-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thingsboard
  namespace: supcom-pfe
spec:
  selector:
    app: thingsboard
  type: ClusterIP
  ports:
    - name: web
      port: 9090
      targetPort: 9090
      protocol: TCP
    - name: mqtt
      port: 1883
      targetPort: 1883
      protocol: TCP
    - name: http-transport
      port: 7070
      targetPort: 7070
      protocol: TCP
    - name: coap
      port: 5683
      targetPort: 5683
      protocol: UDP
